--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 html, body {
-    margin:0px;
+    margin:0 auto;
     height:100%;
 }
 
@@ -28,5 +28,38 @@ textarea {
 #footer {
     grid-row-start: 2;
     grid-column: 1/3;
+    align-self: center;
 }
+.h1 {
+    font-size: xx-large;
+    font-weight: bolder;
+    display:block;
+}
+@media (max-width: 1000px) {
 
+    .container {
+        display: grid;
+        grid-template-rows:10% 85% 5%;
+        height: 100%;
+    }
+  
+    #text, #details{
+      grid-column: 1 / span 3;
+    }
+    #details {
+        grid-row-start: 1;
+        align-self: center;
+    }
+    #text {
+        grid-row-start: 2;
+    }
+    #footer {
+        grid-row-start: 3;
+        grid-column: 1/3;
+    }
+    .h1 {
+        font-size: medium;
+        font-weight:normal;
+        display: inline-block;
+    }
+}
